--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#"><img src="panda-commerce/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -21,21 +21,74 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#Shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="#Bagpack">Bagpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link " href="#Contact">Contact Us!</a>
                   </li>
                 </ul>
               </div>
             </div>
           </nav>
     </div>
+    <!-- Curosul Html start -->
+    <div class="container">
+      <div id="carouselExampleAutoplaying" class="carousel slide orange-bg" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>Mega LCD TV For Sports</h1>
+                <p>This the best tv in the world for pepole who just waste time in front of tv...</p>
+                <h1 class="price">$1200</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="panda-commerce/banner-images/tv.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>Cool dude HEADPhone</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit quas quam veritatis, tempora rem vitae commodi est tenetur qui quia.</p>
+                <h1 class="price">$420</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="panda-commerce/banner-images/headphone.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="row align-items-center">
+              <div class="col-md-7">
+                <h1>X-BOX for your living Room</h1>
+                <p>This the best tv in the world for pepole who just waste time in front of tv...</p>
+                <h1 class="price">$600</h1>
+                <button class="buy-now-button">Buy Now</button>
+              </div>
+              <div class="col-md-5">
+                <img src="panda-commerce/banner-images/xbox.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
 
-    <h1>hell panda commerce</h1>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
