--- a/index.html
+++ b/index.html
@@ -88,7 +88,29 @@
         </button>
       </div>
     </div>
-
+    <!-- Catagories -->
+    <div class="container Catagories">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="cat1 d-flex justify-content-between align-items-center">
+            <h1>Watch</h1>
+          <img src="panda-commerce/categories/watch.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-4">
+        <div class="cat2 d-flex justify-content-between align-items-center">
+          <h1>Bag</h1>
+          <img src="panda-commerce/categories/bag.png" alt="">
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="d-flex justify-content-between align-items-center cat3">
+            <h1>Shoes</h1>
+            <img src="panda-commerce/categories/shoes.png" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
