--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Panda-commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -21,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#Shoes">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#Bagpack">Bagpack</a>
@@ -111,7 +115,103 @@
         </div>
       </div>
     </div>
-
+    <!-- Card Section Start -->
+    <div class="container shoes" id="shoes">
+      <h3>Shoes</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 card-desing">
+            <img src="panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content..</p>
+              <h5>$120</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 card-desing">
+            <img src="panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5>$320</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100  card-desing">
+            <img src="panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content..</p>
+              <h5>$350</h5>
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- bag -->
+    <div class="container bagpack" id="Bagpack">
+      <h3>Bagpack</h3>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100 card-desing">
+            <img src="panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red laltu</h5>
+              <h5>$120</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 card-desing">
+            <img src="panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue niltu</h5>
+              <h5>$350</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100 card-desing">
+            <img src="panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black kaltu</h5>
+              <h5>$160</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <button class="buy-now-button">Buy Now>></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Bottom Section -->
+    <div class="container orange-bg d-flex justify-content-center align-items-center" id="Contact">
+      <div>
+        <h3>LET'S STAY IN TOUCH</h3>
+        <h6>Get updates on sales, specials and more</h6>
+        <input class="form-control" placeholder="Enter Your Email" type="email">
+        <button class="buy-now-button">SUBMIT</button>
+      </div>
+    </div>
+    <!-- Footer Section -->
+    <footer>
+      <small>©2024Pnadda Commerce .All rights reserved. Niloy,Bangladesh</small>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
